Done up to Required resources section

--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -78,11 +78,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Course resources\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n",
+    "## Required resources\n",
+    "\n",
+    "### Textbook\n",
+    "\n",
+    "> Poldrack, R. A., Mumford J. A., & Nichols T. E. <br>\n",
+    "> ***Handbook of Functional MRI Analysis***. <br>\n",
+    "> Cambridge University Press, 2011\n",
+    ">\n",
+    "> *Electronic version (ProQuest Ebook Central) can be viewed through the UT Library, with some restrictions on downloading.* \n",
+    "\n",
+    "\n",
+    "### Hardware\n",
+    "\n",
+    "***Computer***: A computer capable of processing neuroimaging data is required. If you choose to use your own laptop, your laptop has to have a sufficiently large memory to handle data sets used in this course. I recommend a system with at least 4GB of RAM per CPU core. There are 10 iMac workstations available in the classroom for students’ use. However, if you use a computer in the classroom, the data and codes used during the class will remain on that computer.\n",
+    "\n",
+    "***Data storage***: Neuroimaging data sets tend to be large. Moreover, software bundles in Docker images can be substantial in size. Data storage (either on a computer or on a network drive) of at least 30GB is recommended.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Software\n",
+    "\n",
+    "***Docker***: Docker is similar to a virtual machine (a computer inside your computer), but is\n",
+    "much simpler and requiring far less resources to run than a virtual machine. Docker enables\n",
+    "you to install and run a bundle of software packages and libraries known as a Docker image.\n",
+    "\n",
+    "***Docker image***: Docker images called **`sathayas/python-fsl-bundle`** (2.7GB) is available from the Docker Hub web site. This Docker image includes Python 3, FSL (neuroimage data analysis tool), and Python libraries necessary for scientific computing, neuroimage data processing, and machine learning.\n",
+    "\n",
+    "  * *Installation instructions on Docker and Docker image will be covered during the first class.*\n",
+    "\n",
+    "  * *Students are expected to install all the necessary packages on their computer, should they elect to use their own computer.* ***The instructor is unable to answer any questions or issues related to software installation during the class.*** *If you need any assistance regarding software installation or issues, consult with the instructor during office hours."
+   ]
   }
  ],
  "metadata": {
