Up to Resources section done

--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -60,7 +60,7 @@
     "  * Manage data and codes associated with their data processing and analysis\n",
     "  * Understand steps involved in fMRI data pre-processing and statistical analysis\n",
     "  * Understand basic concepts in machine learning\n",
-    "  * Summarize and articulate concepts on fMRI data processing from a book chapter or from a scientific article.\n",
+    "  * Summarize and articulate concepts on fMRI data processing\n",
     "\n",
     "\n",
     "## How will I learn?\n",
@@ -72,6 +72,14 @@
     "During the demonstration, the instructor will demonstrate a tool(s) associated with the topic for the day. This will include explanations of a pertinent software tool, how to code / use it,\n",
     "and an example of an analysis using that tool. There will be some hands-on exercises so that\n",
     "students can try using the tools.\n",
+    "\n",
+    "\n",
+    "## How is the course organized?\n",
+    "\n",
+    "The course consists of three parts:\n",
+    "  * **Python coding** (Weeks 1-2): Covers basics of Python coding and tools for coding.\n",
+    "  * **Fundamentals** (Weeks 3-8): Covers concepts on pre-processing and statistical analysis of fMRI data, mainly from the textbook.\n",
+    "  * **New stuff** (Weeks 9-13): Covers new analysis methods based on machine learning, mainly from the current literature. \n",
     "\n",
     "## Pre-requisites for the course\n",
     "No pre-requisite for this course. Anyone interested in functional MRI and willing to code is a good candidate to take this course. "
@@ -109,12 +117,73 @@
     "much simpler and requiring far less resources to run than a virtual machine. Docker enables\n",
     "you to install and run a bundle of software packages and libraries known as a Docker image.\n",
     "\n",
-    "***Docker image***: Docker images called **`sathayas/python-fsl-bundle`** (2.7GB) is available from the Docker Hub web site. This Docker image includes Python 3, FSL (neuroimage data analysis tool), and Python libraries necessary for scientific computing, neuroimage data processing, and machine learning.\n",
+    "***Docker image***: Docker images called **`sathayas/python-fsl-bundle`** (~3GB) is available from the Docker Hub web site. This Docker image includes Python 3, FSL (neuroimage data analysis tool), and Python libraries necessary for scientific computing, neuroimage data processing, and machine learning.\n",
     "\n",
     "  * *Installation instructions on Docker and Docker image will be covered during the first class.*\n",
     "\n",
     "  * *Students are expected to install all the necessary packages on their computer, should they elect to use their own computer.* ***The instructor is unable to answer any questions or issues related to software installation during the class.*** *If you need any assistance regarding software installation or issues, consult with the instructor during office hours."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optional Resources\n",
+    "\n",
+    "### Optional textbook\n",
+    "\n",
+    "> Al Sweigart. <br>\n",
+    "> Automate the Boring Stuff with Python: Practical Programming for Total Beginners. <br>\n",
+    "> No Starch Press (2015)\n",
+    ">\n",
+    "> For those who have never used Python before. *Electronic version can be viewed via the Author's web site.* \n",
+    "\n",
+    "\n",
+    "### Software\n",
+    "\n",
+    "***Git***: Git enables you to clone (or copy) codes, notes, and some data associated with this class from GitHub. Git is already pre-installed on Mac. For Windows users, you can download Git for free from its website (https://git-scm.com/downloads). The use of Git is explained in a separate documentation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Course materials\n",
+    "\n",
+    "### Course notes\n",
+    "Course notes are in Jupyter Notebook format, and available from the instructor’s\n",
+    "GitHub repository at https://github.com/sathayas/JupyterfMRIFall2019. \n",
+    "\n",
+    "Students may clone the repository or download individual documents to be opened in Jupyter\n",
+    "notebook on their computer. Alternatively, students can view the notes on their web browser,\n",
+    "either directly on GitHub or via the Jupyter Viewer web site (http://nbviewer.jupyter.org). When\n",
+    "viewed in a web browser, codes cannot be executed. Links to individual notes will be provided on\n",
+    "Canvas. *Please note that notes will be added and updated throughout the semester.*\n",
+    "\n",
+    "\n",
+    "### Reading materials\n",
+    "Unfortunately, I cannot post PDF journal articles on GitHub due to copyrights. They will be available via Canvas.\n",
+    "\n",
+    "\n",
+    "### Codes\n",
+    "Some example codes used during the class, as well as some sample solutions for in-class\n",
+    "exercises and homework assignments, will be available on GitHub at [URL to be added].\n",
+    "\n",
+    "Students may clone the repository or download individual codes to be saved on their computer.\n",
+    "Codes can also be viewed on a web browser. Codes are organized into folders for different\n",
+    "modules. Links to folders are provided on Canvas.\n",
+    "\n",
+    "\n",
+    "### Data\n",
+    "Data sets used in this class are publicly available data sets on the web. A link for each data set is provided in the course note. In some classes, only a subset of a data set will be used, as opposed to the full data set. In such cases, the sub-data set will be available via Box.com. The link will be provided in the course note. *Students are responsible for downloading the data set(s) to their computer before the class.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
