Changed the style for section heading

--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -24,8 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Logistics\n",
-    "<hr style=\"height:1px;border:none\" />\n",
+    "<h1 style=\"background-color:black; color:white; font-size:32px; padding:5px 0 5px 0;\">Logistics</h1>\n",
     "\n",
     "## Class\n",
     "**Class meets**: 1-4pm, Mondays, SEA 2.210\n",
@@ -47,8 +46,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Course description\n",
-    "<hr style=\"height:1px;border:none\" />\n",
+    "<h1 style=\"background-color:black; color:white; font-size:32px; padding:5px 0 5px 0;\">\n",
+    "Course description</h1>\n",
     "\n",
     "***University Catalog Course Description:*** This course covers preprocessing and statistical\n",
     "analysis methods of fMRI data with tutorials and laboratory exercises. Three lecture hours a week for one semester.\n",
@@ -89,8 +88,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Course resources\n",
-    "<hr style=\"height:1px;border:none\" />\n",
+    "<h1 style=\"background-color:black; color:white; font-size:32px; padding:5px 0 5px 0;\">\n",
+    "Course resources</h1>\n",
     "\n",
     "## Required resources\n",
     "\n",
@@ -176,6 +175,47 @@
     "\n",
     "### Data\n",
     "Data sets used in this class are publicly available data sets on the web. A link for each data set is provided in the course note. In some classes, only a subset of a data set will be used, as opposed to the full data set. In such cases, the sub-data set will be available via Box.com. The link will be provided in the course note. *Students are responsible for downloading the data set(s) to their computer before the class.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"background-color:black; color:white; font-size:32px; padding:5px 0 5px 0;\">\n",
+    "Grading</h1>\n",
+    "\n",
+    "## Homework Assignments (30 points)\n",
+    "There will be 3 homework assignments throughout the semester (10 points each). Homework assignments will be posted on Canvas. Students are expected to turn in their homework assignments on Canvas before the deadline.\n",
+    "\n",
+    "\n",
+    "## Chapter / Journal Presentation (40 points)\n",
+    "Each student will present a chapter from the textbook (20 points), and a journal article (20 points). Each student can sign up for the chapter / topic they are interested in presenting. For a journal presentation, instructor will suggest a paper related to the topic. A presentation can be informal, but should cover these aspects:\n",
+    "  * **Summarizing the materials**: Summary of the method / technique presented in the chapter or paper\n",
+    "  * **Critical review of the paper** (for journal presentation only): Strengths / weaknesses of the paper\n",
+    "  \n",
+    "Each presentation will be evaluated by other students in open peer reviews. All students are\n",
+    "expected to have read the reading material prior to the class.\n",
+    "\n",
+    "Students may switch their presentation dates with another student, with a permission from the instructor. However, the chapter / topic may not be changed and remains as outlined on the syllabus.\n",
+    "\n",
+    "\n",
+    "## Final Project (20 points)\n",
+    "There will be a final project at the end of semester. This is a group project, with 2-3 students per team, processing and/or analyzing fMRI. Students will be given a list of projects\n",
+    "prior to the final project, and each student will choose a project of interest. Those selecting the same project will be organized into teams. Each team will work collectively to address the problem and present their results to the class.\n",
+    "\n",
+    "\n",
+    "## Attendance (10 points)\n",
+    "Because each chapter / journal presentation is reviewed by peers, it is important that students attend the class and submit a feedback on their classmates’ presentations. For that reason, attendance is mandatory. If a student is unable to attend a class for a legitimate reason (e.g., religious holidays, conferences, illness, family emergencies, jury duty, etc.), he or she must obtain a prior approval from the instructor. Any unexcused absence will result in loss of 2 points in the attendance score for each occurrence. Any unexcused tardiness (of 20+ min) or early departures will result in loss of 1 point for each occurrence.\n",
+    "\n",
+    "\n",
+    "## In-Class Exercise Presentations (Extra points)\n",
+    "Students can present answers to in-class exercises to earn extra points. Students can post their\n",
+    "answer using the Discussion function on Canvas by responding to a post by the instructor. Among\n",
+    "posted submissions, one student is selected to explain his/her answer to the class. For each\n",
+    "presentation, students earn 0.5 point. The instructor will ensure that different students have\n",
+    "opportunities to present when selecting a submission. The priority will be given to students who\n",
+    "have not presented before, or who have presented fewer times than other students. The\n",
+    "presentation points will be added during the calculation of the final grade. If a student’s points for the final grade exceed 100 points, then the grade will be capped at 100 points."
    ]
   },
   {
