Section heading now centered and 36pt

--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"background-color:black; color:white; font-size:32px; padding:5px 0 5px 0;\">Logistics</h1>\n",
+    "<h1 style=\"background-color:black; color:white; font-size:36px; padding:5px 0 5px 0; text-align:center;\">Logistics</h1>\n",
     "\n",
     "## Class\n",
     "**Class meets**: 1-4pm, Mondays, SEA 2.210\n",
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"background-color:black; color:white; font-size:32px; padding:5px 0 5px 0;\">\n",
+    "<h1 style=\"background-color:black; color:white; font-size:36px; padding:5px 0 5px 0; text-align:center;\">\n",
     "Course description</h1>\n",
     "\n",
     "***University Catalog Course Description:*** This course covers preprocessing and statistical\n",
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"background-color:black; color:white; font-size:32px; padding:5px 0 5px 0;\">\n",
+    "<h1 style=\"background-color:black; color:white; font-size:36px; padding:5px 0 5px 0; text-align:center;\">\n",
     "Course resources</h1>\n",
     "\n",
     "## Required resources\n",
@@ -181,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"background-color:black; color:white; font-size:32px; padding:5px 0 5px 0;\">\n",
+    "<h1 style=\"background-color:black; color:white; font-size:36px; padding:5px 0 5px 0; text-align:center;\">\n",
     "Grading</h1>\n",
     "\n",
     "## Homework Assignments (30 points)\n",
