Up to Grading section done

--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -215,7 +215,56 @@
     "presentation, students earn 0.5 point. The instructor will ensure that different students have\n",
     "opportunities to present when selecting a submission. The priority will be given to students who\n",
     "have not presented before, or who have presented fewer times than other students. The\n",
-    "presentation points will be added during the calculation of the final grade. If a student’s points for the final grade exceed 100 points, then the grade will be capped at 100 points."
+    "presentation points will be added during the calculation of the final grade. If a student’s points for the final grade exceed 100 points, then the grade will be capped at 100 points.\n",
+    "\n",
+    "\n",
+    "## Final Grade\n",
+    "The final grade is based on the combined points from the homework assignments, journal\n",
+    "presentation, final project, attendance, and in-class exercise (bonus points), with the maximum\n",
+    "of 100 points:\n",
+    "\n",
+    "<table style=\"width:65%\">\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center; font-weight:bold;\">Points</td>\n",
+    "        <td style=\"text-align:center; font-weight:bold;\">Grade</td>\n",
+    "        <td style=\"text-align:center; font-weight:bold;\">Points</td>\n",
+    "        <td style=\"text-align:center; font-weight:bold;\">Grade</td>\n",
+    "        <td style=\"text-align:center; font-weight:bold;\">Points</td>\n",
+    "        <td style=\"text-align:center; font-weight:bold;\">Grade</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">93-100</td> \n",
+    "        <td style=\"text-align:center;\">A</td>\n",
+    "        <td style=\"text-align:center;\">80-82.99</td>\n",
+    "        <td style=\"text-align:center;\">B-</td>\n",
+    "        <td style=\"text-align:center;\">67-69.99</td>\n",
+    "        <td style=\"text-align:center;\">D+</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">90-92.99</td>\n",
+    "        <td style=\"text-align:center;\">A-</td>\n",
+    "        <td style=\"text-align:center;\">77-79.99</td>\n",
+    "        <td style=\"text-align:center;\">C+</td>\n",
+    "        <td style=\"text-align:center;\">63-66.99</td>\n",
+    "        <td style=\"text-align:center;\">D</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">87-89.99</td>\n",
+    "        <td style=\"text-align:center;\">B+</td>\n",
+    "        <td style=\"text-align:center;\">73-76.99</td>\n",
+    "        <td style=\"text-align:center;\">C</td>\n",
+    "        <td style=\"text-align:center;\">60-62.99</td>\n",
+    "        <td style=\"text-align:center;\">D-</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">83-86.99</td>\n",
+    "        <td style=\"text-align:center;\">B</td>\n",
+    "        <td style=\"text-align:center;\">70-72.99</td>\n",
+    "        <td style=\"text-align:center;\">C-</td>\n",
+    "        <td style=\"text-align:center;\">Below 60</td>\n",
+    "        <td style=\"text-align:center;\">F</td>\n",
+    "    </tr>\n",
+    "</table>"
    ]
   },
   {
