Added Policies section; added the schedule (draft)

--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -77,8 +77,8 @@
     "\n",
     "The course consists of three parts:\n",
     "  * **Python coding** (Weeks 1-2): Covers basics of Python coding and tools for coding.\n",
-    "  * **Fundamentals** (Weeks 3-8): Covers concepts on pre-processing and statistical analysis of fMRI data, mainly from the textbook.\n",
-    "  * **New stuff** (Weeks 9-13): Covers new analysis methods based on machine learning, mainly from the current literature. \n",
+    "  * **Fundamentals** (Weeks 3-9): Covers concepts on pre-processing and statistical analysis of fMRI data, mainly from the textbook.\n",
+    "  * **New stuff** (Weeks 10-14): Covers new analysis methods based on machine learning, mainly from the current literature. \n",
     "\n",
     "## Pre-requisites for the course\n",
     "No pre-requisite for this course. Anyone interested in functional MRI and willing to code is a good candidate to take this course. "
@@ -189,7 +189,7 @@
     "\n",
     "\n",
     "## Chapter / Journal Presentation (40 points)\n",
-    "Each student will present a chapter from the textbook (20 points), and a journal article (20 points). Each student can sign up for the chapter / topic they are interested in presenting. For a journal presentation, instructor will suggest a paper related to the topic. A presentation can be informal, but should cover these aspects:\n",
+    "Each student will present a chapter from the textbook (20 points), and a journal article (20 points). Each student can sign up for the chapter / topic they are interested in presenting. For a journal presentation, instructor will suggest a paper related to the topic. A presentation can be informal (up to 45min), but should cover these aspects:\n",
     "  * **Summarizing the materials**: Summary of the method / technique presented in the chapter or paper\n",
     "  * **Critical review of the paper** (for journal presentation only): Strengths / weaknesses of the paper\n",
     "  \n",
@@ -268,11 +268,188 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h1 style=\"background-color:black; color:white; font-size:36px; padding:5px 0 5px 0; text-align:center;\">\n",
+    "Policies</h1>\n",
+    "\n",
+    "## Auditing\n",
+    "Those who are interested in auditing this class may do so by requesting a permission from the instructor BEFORE attending the class. The instructor may grant access to Canvas for those auditing the class. The instructor reserves the right to revoke the permission to audit when a person auditing the class is deemed disruptive to the class (e.g., asking many questions not directly related to the class, engaging in activities unrelated to the class). The instructor will not grade homework or any other assignments completed by auditors. \n",
+    "\n",
+    "If you are a graduate student, I ask you to register for the class rather than auditing. This is because a low number of student enrollment will result in cancellation of the class.\n",
+    "\n",
+    "\n",
+    "## Attendance\n",
+    "Attendance is mandatory. If you are unable to attend these due to religious holidays or extenuating circumstances (e.g., health issues, family emergencies), please consult the instructor as soon as possible (see Attendance under Grading).\n",
+    "\n",
+    "\n",
+    "## Late Assignments\n",
+    "Unless a student receives a prior permission from the instructor for a late submission, points will be deducted for assignments turned in late according to the following rule:\n",
+    "  * Less than 1 day late: -1 point\n",
+    "  * 2 days late: -2 points\n",
+    "  * 3 days late: -4 points\n",
+    "  * More than 3 days late: -6 points\n",
+    "  * More than a week late: -10 points\n",
+    "\n",
+    "If there is an extenuating circumstance (e.g., health problems, family emergencies, etc.) to prevent you from submitting a homework assignment, to avoid reduced points, please ask the instructor’s permission for a late submission BEFORE the deadline. When there is a late submission with a prior approval, the instructor will delay posting the solution on GitHub.\n",
+    "\n",
+    "\n",
+    "## Group Submissions\n",
+    "Students may work together on a homework assignment. If students do work together, the students in the same group may submit an identical submission. Each student is still responsible for submitting homework assignments individually on Canvas. When your homework assignment submission is part of a group submission, you must comment in your submission (either in the submission document itself or using the comment function in Canvas) whom you worked with. When students are working together, their group size may not exceed 3. If nearly identical documents are submitted without noting any collaboration, such submissions are considered cheating. Students may not submit the instructor's solution, even with modifications, as their own submission. \n",
+    "\n",
+    "\n",
+    "## Academic Integrity\n",
+    "Plagiarism, cheating, collusion, and any other form of academic misconduct are considered a serious offence. The instructor will follow the definition of academic misconduct defined by Chapter 11, Student Discipline and Conduct, of the Institutional Rules on Student Services and\n",
+    "Activities when determining whether such an infraction has taken place. Students can find materials on student conduct and academic integrity at\n",
+    "\n",
+    "http://deanofstudents.utexas.edu/sjs/acint_student.php\n",
+    "\n",
+    "***Please note that the instructor will report any incident of academic misconduct.*** The sanction for an academic misconduct ranges from reduced points on assignments to dismissal from the university, depending on a student’s prior records on academic misconduct.\n",
+    "\n",
+    "\n",
+    "## Students with Disabilities and Different Learning Styles\n",
+    "This class respects and welcomes students of all backgrounds, identities, and abilities. If there are circumstances that make our learning environment and activities difficult, if you have medical information that you need to share with me, or if you need specific arrangements in case the building needs to be evacuated, please let me know. I am committed to creating an effective learning environment for all students, but I can only do so if you discuss your needs with me as early as possible. I promise to maintain the confidentiality of these discussions. If appropriate, also contact Services for Students with Disabilities, 512-471-6259 (voice) or 1-866-329-3986 (video phone). http://ddce.utexas.edu/disability/about/\n",
+    "\n",
+    "\n",
+    "## Preferred Names & Gender Pronouns\n",
+    "The course roster provided by the Registrar's office likely lists your legal full name. If you have an alternate name or a nickname you preferred to be addressed by, please inform the instructor. Likewise, please inform the instructor if you prefer to be addressed by an alternate gender pronoun."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"background-color:black; color:white; font-size:36px; padding:5px 0 5px 0; text-align:center;\">\n",
+    "Course schedule</h1>\n",
+    "\n",
+    "***Note:*** *The course schedule is subject to change, depending on the amount of materials we can cover. It is your responsibility to note these changes when announced (although I will do my best to ensure that you receive the changes with as much advanced notice as possible).*\n",
+    "\n",
+    "<table style=\"width:95%\">\n",
+    "    <tr>\n",
+    "        <th style=\"text-align:center; font-weight:bold; width:7.5%\">Date</th>\n",
+    "        <th style=\"text-align:center; font-weight:bold; width:20%\">Topic(s)</th>\n",
+    "        <th style=\"text-align:center; font-weight:bold; width:18%\">Reading</th>\n",
+    "        <th style=\"text-align:center; font-weight:bold; width:12%\">Presenter</th>\n",
+    "        <th style=\"text-align:center; font-weight:bold; width:30%\">Demo</th>\n",
+    "        <th style=\"text-align:center; font-weight:bold; width:7.5%\">HW</th>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">9/9</td> \n",
+    "        <td style=\"text-align:center;\">Introduction, programming tools, Python basics</td>\n",
+    "        <td style=\"text-align:center;\">Chapter 1</td>\n",
+    "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
+    "        <td style=\"text-align:center;\">Docker, Jupyter, Git, GitHub, Python\n",
+    "                                        (variables, lists, flow control - if, for, while)</td>\n",
+    "        <td style=\"text-align:center;\"> </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">9/16</td> \n",
+    "        <td style=\"text-align:center;\">More Python, NIfTI and BIDS</td>\n",
+    "        <td style=\"text-align:center;\">Chapter 2.1-2.2</td>\n",
+    "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
+    "        <td style=\"text-align:center;\">Python (file I/O, dictionary, arrays), \n",
+    "                                        NIfTI format </td>\n",
+    "        <td style=\"text-align:center;\"> </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">9/23</td> \n",
+    "        <td style=\"text-align:center;\">Pre-processing</td>\n",
+    "        <td style=\"text-align:center;\">Chapter 3</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">BIDS, Motion correction</td>\n",
+    "        <td style=\"text-align:center;\"> </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">9/30</td> \n",
+    "        <td style=\"text-align:center;\">Spatial normalization</td>\n",
+    "        <td style=\"text-align:center;\">Chapter 4</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Normalization, quality control</td>\n",
+    "        <td style=\"text-align:center;\"> </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">10/7</td> \n",
+    "        <td style=\"text-align:center;\">Temporal modeling</td>\n",
+    "        <td style=\"text-align:center;\">Chapter 5.1-5.2</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">First-level analysis</td>\n",
+    "        <td style=\"text-align:center;\">HW1 due</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">10/14</td> \n",
+    "        <td style=\"text-align:center;\">Group analysis</td>\n",
+    "        <td style=\"text-align:center;\">Chapter 6</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Second-level analysis</td>\n",
+    "        <td style=\"text-align:center;\"> </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">10/21</td> \n",
+    "        <td style=\"text-align:center;\">Statistical inference</td>\n",
+    "        <td style=\"text-align:center;\">Chapter 7.1-7.3</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Multiple comparison corrections</td>\n",
+    "        <td style=\"text-align:center;\"> </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">10/28</td> \n",
+    "        <td style=\"text-align:center;\">Study design</td>\n",
+    "        <td style=\"text-align:center;\">Chapter 5.3</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\"> </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">11/4</td> \n",
+    "        <td style=\"text-align:center;\">Processing pipeline</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">fMRIPrep</td>\n",
+    "        <td style=\"text-align:center;\">HW2 due</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">11/11</td> \n",
+    "        <td style=\"text-align:center;\">Machine learning basics</td>\n",
+    "        <td style=\"text-align:center;\"></td>\n",
+    "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
+    "        <td style=\"text-align:center;\">Scikit-learn, nilearn</td>\n",
+    "        <td style=\"text-align:center;\"> </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">11/18</td> \n",
+    "        <td style=\"text-align:center;\">Searchlight</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Nilearn</td>\n",
+    "        <td style=\"text-align:center;\"> </td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">11/25</td> \n",
+    "        <td style=\"text-align:center;\">RSA</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Nilearn</td>\n",
+    "        <td style=\"text-align:center;\"></td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">12/2</td> \n",
+    "        <td style=\"text-align:center;\">Public data repositories</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
+    "        <td style=\"text-align:center;\">Final project kick-off</td>\n",
+    "        <td style=\"text-align:center;\">HW3 due</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td style=\"text-align:center;\">12/9</td> \n",
+    "        <td style=\"text-align:center;\">MVPA</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">TBD</td>\n",
+    "        <td style=\"text-align:center;\">Final project presentations</td>\n",
+    "        <td style=\"text-align:center;\"> </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
   }
  ],
  "metadata": {
@@ -291,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
