--- a/Syllabus/Syllabus_fMRI_Fall2019.ipynb
+++ b/Syllabus/Syllabus_fMRI_Fall2019.ipynb
@@ -348,7 +348,7 @@
     "        <td style=\"text-align:center;\">More Python, NIfTI and BIDS</td>\n",
     "        <td style=\"text-align:center;\">Chapter 2.1-2.2</td>\n",
     "        <td style=\"text-align:center;\">Satoru Hayasaka</td>\n",
-    "        <td style=\"text-align:center;\">Python (file I/O, dictionary, arrays), \n",
+    "        <td style=\"text-align:center;\">Python (file I/O, dictionary, data frame, arrays), \n",
     "                                        NIfTI format </td>\n",
     "        <td style=\"text-align:center;\"> </td>\n",
     "    </tr>\n",
@@ -468,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.6"
   }
  },
  "nbformat": 4,
