Added the Logistic section

--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -14,18 +14,39 @@
     "\n",
     "<p style='text-align:center; font-size:40px; margin-bottom: 30px;'><b> Overview </b></p>\n",
     "\n",
-    "<p style='text-align:center; font-size:14px; margin-bottom: 32px;'><b> September 9, 2019 </b></p>\n",
+    "<p style=\"text-align:center; font-size:18px; margin-bottom: 32px;\"><b> September 9, 2019</b></p>\n",
     "\n",
     "\n",
     "<hr style='height:5px;border:none' />"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Syllabus (Executive Summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Logistics\n",
+    "<hr style=\"height:1px;border:none\" />\n",
+    "\n",
+    "\n",
+    "## Instructor\n",
+    "**Satoru Hayasaka, Ph.D.**\n",
+    "* Office: SEA 2.214\n",
+    "* Email: hayasaka@utexas.edu\n",
+    "* Office hours: 10:00-11:30am, Mon & Fri - Or by appointment\n",
+    "\n",
+    "## Class\n",
+    "* **Day/time**: Mon, 1pm-4pm\n",
+    "* **Location**: SEA 2.210\n",
+    "  * The classroom is unlocked during the class\n",
+    "  * Proximity card access required other times\n"
+   ]
   }
  ],
  "metadata": {
